--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# build artifacts
-plugin.sketchplugin
-
 # npm
 node_modules
 .npm
@@ -11,3 +8,6 @@ npm-debug.log
 
 # WebStorm
 .idea
+
+# map
+*.map
